Enhance build spec